master/interpreter/generated/ClusterDSLParser.py
# Generated from master/interpreter/grammar/ClusterDSL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ClusterDSLParser ( Parser ):

    grammarFileName = "ClusterDSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'deploy'", "'to'", "'parallel'", "'run'", 
                     "'update'", "'info'", "'temp'", "'.'", "'('", "')'", 
                     "'{'", "'}'", "'>'", "'->'", "';'" ]

    symbolicNames = [ "<INVALID>", "DEPLOY", "TO", "PARALLEL", "RUN", "UPDATE", 
                      "INFO", "TEMP", "DOT", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "GT", "ARROW", "TERMINATOR", "IDENT", "INT", 
                      "STRING", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_nodeRunStmt = 2
    RULE_nodeUpdateStmt = 3
    RULE_nodeInfoStmt = 4
    RULE_deployStmt = 5
    RULE_sensorStmt = 6
    RULE_parallelBlock = 7

    ruleNames =  [ "program", "statement", "nodeRunStmt", "nodeUpdateStmt", 
                   "nodeInfoStmt", "deployStmt", "sensorStmt", "parallelBlock" ]

    EOF = Token.EOF
    DEPLOY=1
    TO=2
    PARALLEL=3
    RUN=4
    UPDATE=5
    INFO=6
    TEMP=7
    DOT=8
    LPAREN=9
    RPAREN=10
    LBRACE=11
    RBRACE=12
    GT=13
    ARROW=14
    TERMINATOR=15
    IDENT=16
    INT=17
    STRING=18
    WS=19
    COMMENT=20

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ClusterDSLParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClusterDSLParser.StatementContext)
            else:
                return self.getTypedRuleContext(ClusterDSLParser.StatementContext,i)


        def getRuleIndex(self):
            return ClusterDSLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ClusterDSLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 65546) != 0):
                self.state = 16
                self.statement()
                self.state = 21
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 22
            self.match(ClusterDSLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nodeRunStmt(self):
            return self.getTypedRuleContext(ClusterDSLParser.NodeRunStmtContext,0)


        def TERMINATOR(self):
            return self.getToken(ClusterDSLParser.TERMINATOR, 0)

        def nodeUpdateStmt(self):
            return self.getTypedRuleContext(ClusterDSLParser.NodeUpdateStmtContext,0)


        def nodeInfoStmt(self):
            return self.getTypedRuleContext(ClusterDSLParser.NodeInfoStmtContext,0)


        def deployStmt(self):
            return self.getTypedRuleContext(ClusterDSLParser.DeployStmtContext,0)


        def sensorStmt(self):
            return self.getTypedRuleContext(ClusterDSLParser.SensorStmtContext,0)


        def parallelBlock(self):
            return self.getTypedRuleContext(ClusterDSLParser.ParallelBlockContext,0)


        def getRuleIndex(self):
            return ClusterDSLParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ClusterDSLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 45
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 24
                self.nodeRunStmt()
                self.state = 26
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==15:
                    self.state = 25
                    self.match(ClusterDSLParser.TERMINATOR)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 28
                self.nodeUpdateStmt()
                self.state = 30
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==15:
                    self.state = 29
                    self.match(ClusterDSLParser.TERMINATOR)


                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 32
                self.nodeInfoStmt()
                self.state = 34
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==15:
                    self.state = 33
                    self.match(ClusterDSLParser.TERMINATOR)


                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 36
                self.deployStmt()
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==15:
                    self.state = 37
                    self.match(ClusterDSLParser.TERMINATOR)


                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 40
                self.sensorStmt()
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==15:
                    self.state = 41
                    self.match(ClusterDSLParser.TERMINATOR)


                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 44
                self.parallelBlock()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeRunStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(ClusterDSLParser.IDENT, 0)

        def DOT(self):
            return self.getToken(ClusterDSLParser.DOT, 0)

        def RUN(self):
            return self.getToken(ClusterDSLParser.RUN, 0)

        def LPAREN(self):
            return self.getToken(ClusterDSLParser.LPAREN, 0)

        def STRING(self):
            return self.getToken(ClusterDSLParser.STRING, 0)

        def RPAREN(self):
            return self.getToken(ClusterDSLParser.RPAREN, 0)

        def getRuleIndex(self):
            return ClusterDSLParser.RULE_nodeRunStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodeRunStmt" ):
                listener.enterNodeRunStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodeRunStmt" ):
                listener.exitNodeRunStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodeRunStmt" ):
                return visitor.visitNodeRunStmt(self)
            else:
                return visitor.visitChildren(self)




    def nodeRunStmt(self):

        localctx = ClusterDSLParser.NodeRunStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_nodeRunStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(ClusterDSLParser.IDENT)
            self.state = 48
            self.match(ClusterDSLParser.DOT)
            self.state = 49
            self.match(ClusterDSLParser.RUN)
            self.state = 50
            self.match(ClusterDSLParser.LPAREN)
            self.state = 51
            self.match(ClusterDSLParser.STRING)
            self.state = 52
            self.match(ClusterDSLParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeUpdateStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(ClusterDSLParser.IDENT, 0)

        def DOT(self):
            return self.getToken(ClusterDSLParser.DOT, 0)

        def UPDATE(self):
            return self.getToken(ClusterDSLParser.UPDATE, 0)

        def LPAREN(self):
            return self.getToken(ClusterDSLParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ClusterDSLParser.RPAREN, 0)

        def getRuleIndex(self):
            return ClusterDSLParser.RULE_nodeUpdateStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodeUpdateStmt" ):
                listener.enterNodeUpdateStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodeUpdateStmt" ):
                listener.exitNodeUpdateStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodeUpdateStmt" ):
                return visitor.visitNodeUpdateStmt(self)
            else:
                return visitor.visitChildren(self)




    def nodeUpdateStmt(self):

        localctx = ClusterDSLParser.NodeUpdateStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_nodeUpdateStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(ClusterDSLParser.IDENT)
            self.state = 55
            self.match(ClusterDSLParser.DOT)
            self.state = 56
            self.match(ClusterDSLParser.UPDATE)
            self.state = 57
            self.match(ClusterDSLParser.LPAREN)
            self.state = 58
            self.match(ClusterDSLParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodeInfoStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(ClusterDSLParser.IDENT, 0)

        def DOT(self):
            return self.getToken(ClusterDSLParser.DOT, 0)

        def INFO(self):
            return self.getToken(ClusterDSLParser.INFO, 0)

        def LPAREN(self):
            return self.getToken(ClusterDSLParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ClusterDSLParser.RPAREN, 0)

        def getRuleIndex(self):
            return ClusterDSLParser.RULE_nodeInfoStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodeInfoStmt" ):
                listener.enterNodeInfoStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodeInfoStmt" ):
                listener.exitNodeInfoStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodeInfoStmt" ):
                return visitor.visitNodeInfoStmt(self)
            else:
                return visitor.visitChildren(self)




    def nodeInfoStmt(self):

        localctx = ClusterDSLParser.NodeInfoStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_nodeInfoStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(ClusterDSLParser.IDENT)
            self.state = 61
            self.match(ClusterDSLParser.DOT)
            self.state = 62
            self.match(ClusterDSLParser.INFO)
            self.state = 63
            self.match(ClusterDSLParser.LPAREN)
            self.state = 64
            self.match(ClusterDSLParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeployStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEPLOY(self):
            return self.getToken(ClusterDSLParser.DEPLOY, 0)

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(ClusterDSLParser.IDENT)
            else:
                return self.getToken(ClusterDSLParser.IDENT, i)

        def TO(self):
            return self.getToken(ClusterDSLParser.TO, 0)

        def getRuleIndex(self):
            return ClusterDSLParser.RULE_deployStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeployStmt" ):
                listener.enterDeployStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeployStmt" ):
                listener.exitDeployStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeployStmt" ):
                return visitor.visitDeployStmt(self)
            else:
                return visitor.visitChildren(self)




    def deployStmt(self):

        localctx = ClusterDSLParser.DeployStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_deployStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(ClusterDSLParser.DEPLOY)
            self.state = 67
            self.match(ClusterDSLParser.IDENT)
            self.state = 68
            self.match(ClusterDSLParser.TO)
            self.state = 69
            self.match(ClusterDSLParser.IDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SensorStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(ClusterDSLParser.IDENT)
            else:
                return self.getToken(ClusterDSLParser.IDENT, i)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(ClusterDSLParser.DOT)
            else:
                return self.getToken(ClusterDSLParser.DOT, i)

        def TEMP(self):
            return self.getToken(ClusterDSLParser.TEMP, 0)

        def GT(self):
            return self.getToken(ClusterDSLParser.GT, 0)

        def INT(self):
            return self.getToken(ClusterDSLParser.INT, 0)

        def ARROW(self):
            return self.getToken(ClusterDSLParser.ARROW, 0)

        def RUN(self):
            return self.getToken(ClusterDSLParser.RUN, 0)

        def LPAREN(self):
            return self.getToken(ClusterDSLParser.LPAREN, 0)

        def STRING(self):
            return self.getToken(ClusterDSLParser.STRING, 0)

        def RPAREN(self):
            return self.getToken(ClusterDSLParser.RPAREN, 0)

        def getRuleIndex(self):
            return ClusterDSLParser.RULE_sensorStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSensorStmt" ):
                listener.enterSensorStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSensorStmt" ):
                listener.exitSensorStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSensorStmt" ):
                return visitor.visitSensorStmt(self)
            else:
                return visitor.visitChildren(self)




    def sensorStmt(self):

        localctx = ClusterDSLParser.SensorStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_sensorStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(ClusterDSLParser.IDENT)
            self.state = 72
            self.match(ClusterDSLParser.DOT)
            self.state = 73
            self.match(ClusterDSLParser.TEMP)
            self.state = 74
            self.match(ClusterDSLParser.GT)
            self.state = 75
            self.match(ClusterDSLParser.INT)
            self.state = 76
            self.match(ClusterDSLParser.ARROW)
            self.state = 77
            self.match(ClusterDSLParser.IDENT)
            self.state = 78
            self.match(ClusterDSLParser.DOT)
            self.state = 79
            self.match(ClusterDSLParser.RUN)
            self.state = 80
            self.match(ClusterDSLParser.LPAREN)
            self.state = 81
            self.match(ClusterDSLParser.STRING)
            self.state = 82
            self.match(ClusterDSLParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParallelBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARALLEL(self):
            return self.getToken(ClusterDSLParser.PARALLEL, 0)

        def LBRACE(self):
            return self.getToken(ClusterDSLParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(ClusterDSLParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClusterDSLParser.StatementContext)
            else:
                return self.getTypedRuleContext(ClusterDSLParser.StatementContext,i)


        def getRuleIndex(self):
            return ClusterDSLParser.RULE_parallelBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParallelBlock" ):
                listener.enterParallelBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParallelBlock" ):
                listener.exitParallelBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParallelBlock" ):
                return visitor.visitParallelBlock(self)
            else:
                return visitor.visitChildren(self)




    def parallelBlock(self):

        localctx = ClusterDSLParser.ParallelBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parallelBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(ClusterDSLParser.PARALLEL)
            self.state = 85
            self.match(ClusterDSLParser.LBRACE)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 65546) != 0):
                self.state = 86
                self.statement()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(ClusterDSLParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





